--- a/Society/WebContent/SLogin.html
+++ b/Society/WebContent/SLogin.html
@@ -20,7 +20,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <!--//webfonts--> 
 <!-- js -->
-<script src="js/jquery-1.11.1.min.js"></script>
+<script src="js/jquery-3.6.3.js"></script>
 <!-- //js -->
 </head> 
 
