--- a/Society/WebContent/UserFile/NewFile.html
+++ b/Society/WebContent/UserFile/NewFile.html
@@ -27,7 +27,7 @@
 <script src="js/Chart.js"></script>
 <!-- //chart -->
  <!-- js-->
-<script src="js/jquery-1.11.1.min.js"></script>
+<script src="js/jquery-3.6.3.js"></script>
 <script src="js/modernizr.custom.js"></script>
 <!--webfonts-->
 <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
