--- a/Society/WebContent/signup.html
+++ b/Society/WebContent/signup.html
@@ -19,7 +19,7 @@
 <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <!--//webfonts--> 
 <!-- js -->
-<script src="js/jquery-1.11.1.min.js"></script>
+<script src="js/jquery-3.6.3.js"></script>
 <!-- //js -->
 </head> 
 <body class="login-bg">
